MAGEP-14: Adding magento product information on helpbar

--- a/view/adminhtml/templates/helperbar.phtml
+++ b/view/adminhtml/templates/helperbar.phtml
@@ -8,7 +8,7 @@
         <span class="mage-mode column mage-mode-<?php echo $block->getMode(); ?>"></span>
 
         <span class="env column">
-            <?php echo $block->getEnv(); ?>
+            <?php echo $block->getProductMetadata() ?> Powered by <a href="https://inviqa.com/">Inviqa</a>
         </span>
 
         <span class="helper-bar-close" id="helper-bar-close">X</span>
