MAGEP-16: Fixing css issue
In the admin/admin login page the bottom bar wasn't starting from
the left side of the page but it was starting from the middle.
Setting left:0; in the css to fix this.

--- a/view/adminhtml/web/helperbar.css
+++ b/view/adminhtml/web/helperbar.css
@@ -1,6 +1,7 @@
 .helper-bar  {
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
     z-index: 9999;
     border-top-right-radius: 5px;
