--- a/view/adminhtml/web/helperbar.css
+++ b/view/adminhtml/web/helperbar.css
@@ -13,7 +13,7 @@
     cursor: hand;
 }
 
-.column {
+.mage-mode-developer > .column {
     float: left;
     margin-left: 10px;
 }
@@ -48,13 +48,13 @@
     background-color: #334982;
 }
 
-.env {
+.mage-mode-developer > .env {
     color: white;
     font-size: 24px;
     padding-top: 10px;
 }
 
-.env > span {
+.mage-mode-developer > .env > span {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
