--- a/view/adminhtml/web/helperbar.css
+++ b/view/adminhtml/web/helperbar.css
@@ -50,7 +50,6 @@
 }
 
 .helper-bar > .env {
-    color: white;
     font-size: 24px;
     padding-top: 10px;
 }
@@ -59,4 +58,12 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.helper-bar > .white {
+    color: white;
+}
+
+#helper-bar-command-search {
+    width: 500px;
 }
