MAGEP-14: Tests fixes and extended to cover extra functionality

--- a/view/adminhtml/templates/helperbar.phtml
+++ b/view/adminhtml/templates/helperbar.phtml
@@ -23,7 +23,7 @@
                     {
                         "closeSelector": "#helper-bar-close",
                         "commandSearchSelector": "#helper-bar-command-search",
-                        "commands": <?= /* @escapeNotVerified */ $block->getCommands(); ?>
+                        "commands": <?= /* @escapeNotVerified */ $this->helper('Magento\Framework\Json\Helper\Data')->jsonEncode($block->getCommands()); ?>
                     }
                 }
             }
