MAGEP-14: Adding title tip with close keyboard shorcut

--- a/view/adminhtml/templates/helperbar.phtml
+++ b/view/adminhtml/templates/helperbar.phtml
@@ -15,7 +15,7 @@
             <input id="helper-bar-command-search">
         </span>
 
-        <span id="helper-bar-close" class="helper-bar-close">X</span>
+        <span id="helper-bar-close" class="helper-bar-close" title="CTRL + `">X</span>
         <script type="text/x-magento-init">
             {
                 "#helper-bar": {
