MAGEP-14: Add environment name from config
- removing helper text on autocomplete widget as breaks layout

--- a/view/adminhtml/web/helperbar.css
+++ b/view/adminhtml/web/helperbar.css
@@ -21,6 +21,10 @@
     margin-left: 10px;
 }
 
+#product-metadata {
+    margin-left: 25%;
+}
+
 .mage-mode-developer {
     background-image:url('images/Flash-Left-Developer.jpg');
     width: 225px;
