--- a/view/adminhtml/templates/helperbar.phtml
+++ b/view/adminhtml/templates/helperbar.phtml
@@ -8,11 +8,15 @@
         <span class="mage-mode column mage-mode-<?= $block->getMode(); ?>"></span>
 
         <span class="env column white">
-            <?= $block->getProductMetadata(); ?>
+            <?= $block->getEnvironmentName(); ?>
         </span>
 
         <span class="env column">
             <input id="helper-bar-command-search">
+        </span>
+
+        <span id="product-metadata" class="env column white">
+            <?= $block->getProductMetadata(); ?>
         </span>
 
         <span id="helper-bar-close" class="helper-bar-close" title="CTRL + `">X</span>
