MAGEP-14: Adding placeholder and input added when at least one command is permitted

--- a/view/frontend/templates/helperbar.phtml
+++ b/view/frontend/templates/helperbar.phtml
@@ -7,13 +7,13 @@
     <div id="helper-bar" class="helper-bar helper-bar-<?= $block->getMode(); ?>">
         <span class="mage-mode column mage-mode-<?= $block->getMode(); ?>"></span>
 
-        <span class="env column white">
+        <span class="env column white vertically-centered">
             <?= $block->getEnvironmentName(); ?>
         </span>
 
         <span id="helper-bar-close" class="helper-bar-close" title="CTRL + `">X</span>
 
-        <span id="product-metadata" class="env column white">
+        <span id="product-metadata" class="env column white vertically-centered">
             <?= $block->getProductMetadata(); ?>
         </span>
 
