--- a/view/adminhtml/templates/helperbar.phtml
+++ b/view/adminhtml/templates/helperbar.phtml
@@ -3,21 +3,25 @@
  * @see \MX\HelperBar\Block\HelperBar
  */
 ?>
+<?php $commands = $this->helper('Magento\Framework\Json\Helper\Data')->jsonEncode($block->getCommands()); ?>
 <?php if ($block->isEnabled()): ?>
     <div id="helper-bar" class="helper-bar helper-bar-<?= $block->getMode(); ?>">
         <span class="mage-mode column mage-mode-<?= $block->getMode(); ?>"></span>
 
-        <span class="env column white">
+        <span class="env column white vertically-centered">
             <?= $block->getEnvironmentName(); ?>
         </span>
 
-        <span class="env column">
-            <input id="helper-bar-command-search">
-        </span>
+        <?php if (count($commands) > 0): ?>
+            <span id="helper-bar-command-column" class="env column white">
+                <?= __("QuickRun") . ':'?><input id="helper-bar-command-search"
+                                                 placeholder="<?= __('Start typing to enter a  quick Command eg : cache') ?>">
+            </span>
+        <?php endif; ?>
 
         <span id="helper-bar-close" class="helper-bar-close" title="CTRL + `">X</span>
 
-        <span id="product-metadata" class="env column white">
+        <span id="product-metadata" class="env column white vertically-centered">
             <?= $block->getProductMetadata(); ?>
         </span>
 
@@ -28,7 +32,8 @@
                     {
                         "closeSelector": "#helper-bar-close",
                         "commandSearchSelector": "#helper-bar-command-search",
-                        "commands": <?= /* @escapeNotVerified */ $this->helper('Magento\Framework\Json\Helper\Data')->jsonEncode($block->getCommands()); ?>
+                        "commands": <?= /* @escapeNotVerified */ $commands ?>,
+                        "helperBarColumn": "#helper-bar-command-column"
                     }
                 }
             }
