Updating command labels and options to be shorter

--- a/src/view/adminhtml/templates/helperbar.phtml
+++ b/src/view/adminhtml/templates/helperbar.phtml
@@ -16,7 +16,7 @@
         <?php if (count($commands) > 0): ?>
             <span id="helper-bar-command-column" class="env column white">
                 <?= __("QuickRun") . ':'?><input id="helper-bar-command-search"
-                                                 placeholder="<?= __('Start typing to enter a  quick Command eg : cache') ?>">
+                                                 placeholder="<?= __('Start typing to enter a  quick Command eg : cc') ?>">
             </span>
         <?php endif; ?>
 
